# Simple-RPG

./: CMakeLists.txt  UML.drawio  main.cpp  uml.mermaid
include/: Entity.h  GameItem.h  Monster.h  Player.h  Potion.h  Skeleton.h  Sword.h  TermColors.h  Wolf.h
src/: Entity.cpp  GameItem.cpp  ItemFactory.cpp  Monster.cpp  Skeleton.cpp  Sword.cpp  main.cpp
src/Entities/: Entity.cpp  Entity.h
src/Entities/Monsters/: Monster.cpp  Monster.h  Spawner.cpp  Spawner.h
src/Entities/Monsters/Skeleton/: Skeleton.cpp  Skeleton.h
src/Entities/Monsters/Wolf/: Wolf.cpp  Wolf.h
src/Entities/Players/: Player.cpp  Player.h
src/GameItems/: GameItem.cpp  GameItem.h  ItemFactory.cpp  ItemFactory.h
src/GameItems/Potion/: Potion.cpp  Potion.h
src/GameItems/Sword/: Sword.cpp  Sword.h
